--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,8 @@
+
 <div>
-  <h2>Sign Up</h2>
+  <h2>Login</h2>
  
-  <form action="/sign-up" method="POST">
+  <form action="/login" method="POST">
  
     <label> Email
       <input type="email" name="email" placeholder="rockstar@ironhack.com" />
@@ -11,7 +12,7 @@
       <input type="password" name="password" placeholder="********" />
     </label>
  
-    <button type="submit">Sign Up</button>
+    <button type="submit">Login</button>
 
     {{#if errorMessage}}
       <p>{{errorMessage}}</p>
